...
    <string name="help_content_import_png">Import an image from the gallery to the stamp tool.</string>
    <string name="help_content_rotate">Tap on the buttons to rotate the image left or right.</string>
    <string name="help_content_line">Draw a straight line.</string>
    <string name="closing_security_question_title">Quit</string>
    <string name="closing_security_question">Save Changes?</string>
    <string name="closing_catroid_security_question_title">Back to Pocket Code</string>
    <string name="menu_new_image">New image</string>
    <string name="menu_load_image">Load image</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_save_copy">Save copy</string>
    <string name="menu_new_image_empty_image">Empty Image</string>
    <string name="menu_item_tools">Tools menu</string>
    <string name="menu_hide_menu">Fullscreen</string>
    <string name="menu_new_image_from_camera">New image from camera</string>

    <string name="menu_terms_of_use_and_service">Terms of Use</string>
    <string name="more">More</string>

    <string name="menu_about">About</string>
    <string name="menu_back">@string/closing_catroid_security_question_title</string>
	<string name="menu_export">Export</string><string name="saved">Image saved</string>
	<string name="copy">Copy saved</string>
    <string name="menu_quit">Quit</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>

    <!--
    exclude preferences for release
        <string name="menu_preferences">Settings</string>
    <string name="preferences_tools">Active Tools</string>
    <string name="preferences_tools_summary">Activate/Deactivate tools.</string>
...
