...
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/dialog_save_image_name"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pocketpaint_image_name_save_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="19dp"
            android:importantForAutofill="no"
            android:inputType="text"
...
